--- a/src/component/cover/index.scss
+++ b/src/component/cover/index.scss
@@ -1,4 +1,11 @@
 .cover {
+  min-height: 100vh; /* 한 화면 꽉 채움 */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+
   .wedding-date {
     margin-top: 2rem;
     font-size: 1.5rem;
@@ -6,6 +13,7 @@
     justify-content: center;
     align-items: center;
     gap: 1rem;
+
     .divider {
       background-color: var(--dark-color);
       width: 1px;
@@ -19,16 +27,9 @@
     margin-bottom: 1rem;
   }
 
+  /* 이미지 제거 */
   .image-wrapper {
-    width: 100%;
-    height: 30rem;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    img {
-      width: 100%;
-      height: auto;
-    }
+    display: none;
   }
 
   .subtitle {
@@ -45,12 +46,14 @@
     justify-content: center;
     align-items: center;
     gap: 0.7rem;
+
     .divider {
       background-color: var(--dark-color);
       width: 1px;
       height: 0.7rem;
     }
   }
+
   .info {
     margin-bottom: 0.3rem;
     opacity: 0.7;
