--- a/src/component/cover/index.scss
+++ b/src/component/cover/index.scss
@@ -33,12 +33,11 @@
   }
 
   .subtitle {
-    font-size: 1.5rem;
-    font-family: "Allura";
-    color: var(--alt-color);
-    margin-top: 1rem;
-  }
-
+  font-size: 1.5rem;
+  font-family: "MapoGoldenPierA", "Noto Sans KR", sans-serif; /* ✅ 수정 */
+  color: var(--alt-color);
+  margin-top: 1rem;
+}
   .names {
     margin-top: 0.5rem;
     margin-bottom: 0.8rem;
