--- a/public/font.css
+++ b/public/font.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "MapoGoldenPier";
-  src: url("./MapoGoldenPierA.woff") format("woff");
+  src: url("./MapoGoldenPier.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
