--- a/src/component/cover/index.scss
+++ b/src/component/cover/index.scss
@@ -34,7 +34,7 @@
 
   .subtitle {
   font-size: 1.5rem;
-  font-family: "MapoGoldenPierA", "Noto Sans KR", sans-serif; /* ✅ 수정 */
+  font-family: "MapoGoldenPier", "Noto Sans KR", sans-serif; /* ✅ 수정 */
   color: var(--alt-color);
   margin-top: 1rem;
 }
