--- a/public/font.css
+++ b/public/font.css
@@ -1,14 +1,13 @@
 @font-face {
   font-family: "MapoGoldenPier";
-  src: url("./MapoGoldenPier.woff") format("woff");
+  src: url("/MapoGoldenPier.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Allura";
-  src: url("./AlluraRegular.woff") format("woff");
+  src: url("/AlluraRegular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
-
