--- a/public/font.css
+++ b/public/font.css
@@ -1,13 +1,13 @@
 @font-face {
   font-family: "MapoGoldenPier";
-  src: url("/MapoGoldenPierA.woff") format("woff");
+  src: url("/260711-main/MapoGoldenPierA.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Allura";
-  src: url("/AlluraRegular.woff") format("woff");
+  src: url("/260711-main/AlluraRegular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
