--- a/src/App.scss
+++ b/src/App.scss
@@ -235,3 +235,26 @@ div.break {
   animation: none !important;
   transition: none !important;
 }
+
+
+
+
+
+
+
+
+.cover {
+  position: relative;
+  z-index: 10; /* 버튼을 항상 클릭 가능한 맨 위로 */
+}
+
+.background,
+.card-view,
+.card-group {
+  pointer-events: auto !important;
+}
+
+button {
+  pointer-events: auto !important;
+}
+
